--- a/FileBagWebApi.DataAccess/appsettings.json
+++ b/FileBagWebApi.DataAccess/appsettings.json
@@ -1,10 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
+  "exclude": [
+    "**/bin",
+    "**/bower_components",
+    "**/jspm_packages",
+    "**/node_modules",
+    "**/obj",
+    "**/platforms"
+  ],
   "ConnectionStrings": {
     "FileBagWebApi": "Server=localhost;Database=FileBagWebApi.Dev;Trusted_Connection=True;MultipleActiveResultSets=True;"
   }
