--- a/FileBagWebApi/appsettings.json
+++ b/FileBagWebApi/appsettings.json
@@ -7,5 +7,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "FileBagWebApi": "Server=localhost;Database=FileBagWebApi.Dev;Trusted_Connection=True;MultipleActiveResultSets=True;"
-  }
+  },
+  "secret": "670df58df5a2ec63b0a33e054418105a",
+  "tokenExpiration": "43200"
 }
