--- a/FileBagWebApi.Bussiness.Implementation/FileBagWebApi.Bussiness.Implementation.csproj
+++ b/FileBagWebApi.Bussiness.Implementation/FileBagWebApi.Bussiness.Implementation.csproj
@@ -5,10 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JWT" Version="6.1.3" />
     <PackageReference Include="log4net" Version="2.0.8" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CSharpUtilities\CSharpUtilities.Extensions\CSharpUtilities.Extensions.csproj" />
     <ProjectReference Include="..\FileBagWebApi.Bussiness.Interfaces\FileBagWebApi.Bussiness.Interfaces.csproj" />
   </ItemGroup>
 
