--- a/FileBagWebApi.DataAccess/FileBagWebApi.DataAccess.EntityFramework.csproj
+++ b/FileBagWebApi.DataAccess/FileBagWebApi.DataAccess.EntityFramework.csproj
@@ -21,6 +21,12 @@
     <Compile Remove="Migrations\20200324070831_MigracionInicial.Designer.cs" />
     <Compile Remove="Migrations\20200324071217_MigracionInicial.cs" />
     <Compile Remove="Migrations\20200324071217_MigracionInicial.Designer.cs" />
+    <Compile Remove="Migrations\20200324233022_MigracionInicial.cs" />
+    <Compile Remove="Migrations\20200324233022_MigracionInicial.Designer.cs" />
+    <Compile Remove="Migrations\20200329004222_MigracionInicial.cs" />
+    <Compile Remove="Migrations\20200329004222_MigracionInicial.Designer.cs" />
+    <Compile Remove="Migrations\20200329050004_MigracionInicial.cs" />
+    <Compile Remove="Migrations\20200329050004_MigracionInicial.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +40,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CSharpUtilities\Entities\CSharpUtilities.Entities\CSharpUtilities.Entities.csproj" />
+    <ProjectReference Include="..\CSharpUtilities\External\EnumUtilities\EnumUtil\EnumUtil.csproj" />
     <ProjectReference Include="..\FileBagWebApi.BussinessEntities\FileBagWebApi.Entities.csproj" />
     <ProjectReference Include="..\FileBagWebApi.DataAccess.Interfaces\FileBagWebApi.DataAccess.Interfaces.csproj" />
     <ProjectReference Include="..\FileBagWebApi.Utilities.NetCore.Interfaces\FileBagWebApi.Utilities.NetCore.Interfaces.csproj" />
