--- a/FileBagWebApi.ServiceClasses/FileBagWebApi.ServiceClasses.csproj
+++ b/FileBagWebApi.ServiceClasses/FileBagWebApi.ServiceClasses.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CSharpUtilities\Entities\CSharpUtilities.Entities\CSharpUtilities.Entities.csproj" />
+    <ProjectReference Include="..\CSharpUtilities\External\EnumUtilities\EnumUtil\EnumUtil.csproj" />
     <ProjectReference Include="..\FileBagWebApi.BussinessEntities\FileBagWebApi.Entities.csproj" />
   </ItemGroup>
 
